# ubpf

./: CMakeLists.txt  dir_93effe02d2e8dd09437fb49d0adaddf7.html  dir_cf6c78462b393272f91793a3a49557d3.html  files.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  index.html  mainpage_8dox.html  menudata.js  ubpf_8h.html  ubpf_8h_source.html
.github/workflows/: fuzzing.yml  main.yml  posix.yml  scorecards.yml  udpate-docs.yml  windows.yml
cmake/: options.cmake  settings.cmake
custom_tests/: CMakeLists.txt  README.md
custom_tests/data/: ubpf_test_external_dispatcher_context_overwrite.input  ubpf_test_external_dispatcher_simple_context.input  ubpf_test_external_stack_contents.input  ubpf_test_frame_pointer.input  ubpf_test_jit_unexpected_instruction.input
custom_tests/descrs/: ubpf_test_external_dispatcher_context_overwrite.md  ubpf_test_external_dispatcher_simple_context.md  ubpf_test_external_stack_contents.md  ubpf_test_frame_pointer.md  ubpf_test_jit_buffer_too_small.md  ubpf_test_jit_unexpected_instruction.md  ubpf_test_update_dispatcher.md
custom_tests/srcs/: test_helpers.h  ubpf_custom_test_support.cc  ubpf_custom_test_support.h  ubpf_test_external_dispatcher_context_overwrite.cc  ubpf_test_external_dispatcher_simple_context.cc  ubpf_test_external_stack_contents.cc  ubpf_test_frame_pointer.cc  ubpf_test_jit_buffer_too_small.cc  ubpf_test_jit_unexpected_instruction.cc  ubpf_test_update_dispatcher.cc  ubpf_test_update_helpers.cc
libfuzzer/: CMakeLists.txt  libfuzz_harness.cc
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  defines_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  functions_0.js  functions_1.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js
tests/: call-save.data  factorial.data  mul-loop-memory-iterations.data
ubpf/: disassembler.py
ubpf_plugin/: CMakeLists.txt  ubpf_plugin.cc
vm/: CMakeLists.txt  test.c  ubpf_int.h  ubpf_jit.c  ubpf_jit_arm64.c  ubpf_jit_support.c  ubpf_jit_support.h  ubpf_jit_x86_64.c  ubpf_jit_x86_64.h  ubpf_vm.c
vm/compat/windows/: unistd.h
vm/compat/windows/sys/: mman.h
vm/inc/: ubpf.h
